--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -5,11 +5,19 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backGround"
     tools:context=".Game6Activity">
+
+    <TextView
+        android:id="@+id/instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/instruction">
 
         <TableRow
             android:layout_width="match_parent"
@@ -22,6 +30,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c1"
                 tools:src="@drawable/c1"
                 tools:srcCompat="@drawable/c1" />
@@ -33,6 +42,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c2"
                 tools:src="@drawable/c2"
                 tools:srcCompat="@drawable/c2" />
@@ -44,6 +54,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c3"
                 tools:src="@drawable/c3"
                 tools:srcCompat="@drawable/c3" />
@@ -60,6 +71,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c4"
                 tools:src="@drawable/c4"
                 tools:srcCompat="@drawable/c4" />
@@ -71,6 +83,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c5"
                 tools:src="@drawable/c5"
                 tools:srcCompat="@drawable/c5" />
@@ -82,6 +95,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c6"
                 tools:src="@drawable/c6"
                 tools:srcCompat="@drawable/c6" />
@@ -98,6 +112,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c7"
                 tools:src="@drawable/c7"
                 tools:srcCompat="@drawable/c7" />
@@ -109,6 +124,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c8"
                 tools:src="@drawable/c8"
                 tools:srcCompat="@drawable/c8" />
@@ -120,6 +136,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
+                android:background="@null"
                 android:src="@drawable/c9"
                 tools:src="@drawable/c9"
                 tools:srcCompat="@drawable/c9" />
