announcement for pass game dialog - updated catalog button * 9 - ver1 game ui - ver 1 pass game dialog - set announcement for hint - updated hint button - set activity 6 - ver 2 activity 5 - ver 1 image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -10,13 +10,20 @@
 
     <TextView
         android:id="@+id/instruction"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:gravity="center_horizontal"
+        android:text="Welcome to Mystic 125!\nTry to solve the top nine unsolved mysteries！"
+        android:textColor="@color/designBlue"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:layout_margin="15dp"/>
 
     <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_below="@id/instruction">
 
         <TableRow
@@ -29,8 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c1"
                 tools:src="@drawable/c1"
                 tools:srcCompat="@drawable/c1" />
@@ -41,8 +48,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c2"
                 tools:src="@drawable/c2"
                 tools:srcCompat="@drawable/c2" />
@@ -53,8 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c3"
                 tools:src="@drawable/c3"
                 tools:srcCompat="@drawable/c3" />
@@ -70,8 +77,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c4"
                 tools:src="@drawable/c4"
                 tools:srcCompat="@drawable/c4" />
@@ -82,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c5"
                 tools:src="@drawable/c5"
                 tools:srcCompat="@drawable/c5" />
@@ -94,8 +101,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c6"
                 tools:src="@drawable/c6"
                 tools:srcCompat="@drawable/c6" />
@@ -111,8 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c7"
                 tools:src="@drawable/c7"
                 tools:srcCompat="@drawable/c7" />
@@ -123,8 +130,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c8"
                 tools:src="@drawable/c8"
                 tools:srcCompat="@drawable/c8" />
@@ -135,8 +142,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/c9"
                 tools:src="@drawable/c9"
                 tools:srcCompat="@drawable/c9" />
