--- a/app/src/main/res/layout/activity_game6.xml
+++ b/app/src/main/res/layout/activity_game6.xml
@@ -5,7 +5,8 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Game6Activity">
+    tools:context=".Game6Activity"
+    android:background="@color/backGround">
 
     <Button
         android:id="@+id/hintButton"
