--- a/app/src/main/res/layout/activity_game4.xml
+++ b/app/src/main/res/layout/activity_game4.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Game4Activity">
+    tools:context=".Game4Activity"
+    android:background="@color/backGround">
 
     <Button
         android:id="@+id/hintButton"
