--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,36 @@
     android:background="@color/backGround"
     tools:context=".MainActivity">
 
-
-    <ImageButton
-        android:id="@+id/startGame"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@null"
-        android:src="@drawable/startbutton"
-        tools:src="@drawable/startbutton"
-        tools:srcCompat="@drawable/startbutton" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/continueGame"
-        android:layout_width="128dp"
-        android:layout_height="64dp"
-        android:layout_below="@id/startGame"
-        android:layout_centerHorizontal="true"
-        android:text="continue"
-        android:visibility="gone" />
+        <ImageView
+            android:id="@+id/title"
+            android:layout_width="320dp"
+            android:layout_height="240dp"
+            android:layout_weight="1"
+            android:scaleType="fitXY" />
+
+        <ImageButton
+            android:id="@+id/startGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/start"
+            tools:src="@drawable/start"
+            tools:srcCompat="@drawable/start" />
+
+        <Button
+            android:id="@+id/continueGame"
+            android:layout_width="128dp"
+            android:layout_height="64dp"
+            android:text="continue"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </RelativeLayout>
