--- a/app/src/main/res/layout/activity_game7.xml
+++ b/app/src/main/res/layout/activity_game7.xml
@@ -74,17 +74,24 @@
             android:layout_height="wrap_content"
             android:text="playing music again" />
 
-        <Button
-            android:id="@+id/resetButtons"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="reset" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/finish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="finish" />
+            <Button
+                android:id="@+id/resetButtons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="reset" />
+
+            <Button
+                android:id="@+id/finish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="finish" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
