--- a/app/src/main/res/layout/activity_game9.xml
+++ b/app/src/main/res/layout/activity_game9.xml
@@ -51,8 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                tools:srcCompat="@drawable/batteryempty" />
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
