--- a/app/src/main/res/layout/chunk_game4_button.xml
+++ b/app/src/main/res/layout/chunk_game4_button.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/gameButton"
-        android:layout_width="250dp"
+    <Button
+        android:id="@+id/numberButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:text="Button" />
 </LinearLayout>
