--- a/app/src/main/res/layout/activity_game4.xml
+++ b/app/src/main/res/layout/activity_game4.xml
@@ -19,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/startButton4"
@@ -32,5 +34,11 @@
         android:layout_marginLeft="130dp"
         android:layout_marginTop="500dp"
         android:text="Button" />
+
+    <TextView
+        android:id="@+id/presentNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </RelativeLayout>
