--- a/app/src/main/res/layout/activity_game3.xml
+++ b/app/src/main/res/layout/activity_game3.xml
@@ -31,6 +31,13 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
                 android:id="@+id/playbutton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
