--- a/app/src/main/res/layout/activity_game9.xml
+++ b/app/src/main/res/layout/activity_game9.xml
@@ -48,8 +48,8 @@
 
             <ImageView
                 android:id="@+id/nocharge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY" />
 
