animation of activity9

--- a/app/src/main/res/layout/activity_game8.xml
+++ b/app/src/main/res/layout/activity_game8.xml
@@ -14,4 +14,16 @@
         android:layout_alignParentRight="true"
         android:text="hint" />
 
+    <Button
+        android:id="@+id/click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </RelativeLayout>
