--- a/app/src/main/res/layout/activity_game3.xml
+++ b/app/src/main/res/layout/activity_game3.xml
@@ -46,8 +46,8 @@
 
             <TextView
                 android:id="@+id/loudandlow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:text="TextView" />
 
         </LinearLayout>
