--- a/app/src/main/res/layout/activity_game9.xml
+++ b/app/src/main/res/layout/activity_game9.xml
@@ -21,13 +21,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/currentp"
-            android:layout_width="115dp"
-            android:layout_height="69dp"
-            android:layout_weight="1"
-            android:text="0%" />
-
-        <TextView
             android:id="@+id/myluxvavlue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,7 +30,7 @@
             android:id="@+id/progressbar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="365dp"
-            android:layout_height="49dp"
+            android:layout_height="66dp"
             android:layout_weight="1" />
 
         <LinearLayout
@@ -48,10 +41,17 @@
 
             <ImageView
                 android:id="@+id/nocharge"
-                android:layout_width="400dp"
-                android:layout_height="400dp"
+                android:layout_width="match_parent"
+                android:layout_height="406dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY" />
+
+            <TextView
+                android:id="@+id/currentp"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_weight="1"
+                android:text="0%" />
 
         </LinearLayout>
 
