--- a/app/src/main/res/layout/activity_game4.xml
+++ b/app/src/main/res/layout/activity_game4.xml
@@ -15,30 +15,35 @@
         android:text="hint" />
 
     <LinearLayout
+        android:layout_below="@id/hintButton"
         android:id="@+id/Table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/startButton4"
-        android:layout_width="132dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="500dp"
-        android:text="Button" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/presentNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/presentNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/startButton4"
+            android:layout_width="132dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="500dp"
+            android:text="Button" />
+
+    </LinearLayout>
 
 </RelativeLayout>
