--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -7,18 +7,6 @@
     tools:context=".Game2Activity"
     android:background="@color/backGround">
 
-    <TextView
-        android:id="@+id/LongitudeDif"
-        android:layout_width="93dp"
-        android:layout_height="85dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="201dp"
-        android:layout_marginLeft="201dp"
-        android:layout_marginTop="260dp"
-        android:text="TextView" />
-
     <Button
         android:id="@+id/hintButton"
         android:layout_width="wrap_content"
@@ -26,41 +14,63 @@
         android:layout_alignParentRight="true"
         android:text="hint" />
 
-    <TextView
-        android:id="@+id/LatitudeText"
-        android:layout_width="201dp"
-        android:layout_height="123dp"
-        android:layout_below="@id/hintButton"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginRight="184dp"
-        android:layout_marginBottom="548dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/hintButton">
 
-    <TextView
-        android:id="@+id/LongitudeText"
-        android:layout_width="201dp"
-        android:layout_height="161dp"
-        android:layout_below="@id/hintButton"
-        android:layout_marginTop="213dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginRight="184dp"
-        android:layout_marginBottom="332dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/LatitudeDif"
-        android:layout_width="93dp"
-        android:layout_height="85dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="201dp"
-        android:layout_marginLeft="201dp"
-        android:layout_marginTop="47dp"
-        android:text="TextView" />
+            <TextView
+                android:id="@+id/LatitudeText"
+                android:layout_width="201dp"
+                android:layout_height="123dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="184dp"
+                android:layout_marginRight="184dp"
+                android:layout_marginBottom="548dp"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/LatitudeDif"
+                android:layout_width="93dp"
+                android:layout_height="85dp"
+                android:layout_marginStart="201dp"
+                android:layout_marginLeft="201dp"
+                android:layout_marginTop="47dp"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/LongitudeDif"
+                android:layout_width="93dp"
+                android:layout_height="85dp"
+                android:layout_marginStart="201dp"
+                android:layout_marginLeft="201dp"
+                android:layout_marginTop="260dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/LongitudeText"
+                android:layout_width="201dp"
+                android:layout_height="161dp"
+                android:layout_marginTop="213dp"
+                android:layout_marginEnd="184dp"
+                android:layout_marginRight="184dp"
+                android:layout_marginBottom="332dp"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </TableRow>
+
+    </TableLayout>
+
 </RelativeLayout>
