--- a/app/src/main/res/layout/dialog_pass.xml
+++ b/app/src/main/res/layout/dialog_pass.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/f_05">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/passInfo"
