--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -16,8 +16,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/hintButton">
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true">
 
         <TableRow
             android:layout_width="match_parent"
@@ -25,24 +25,21 @@
 
             <TextView
                 android:id="@+id/LatitudeText"
-                android:layout_width="201dp"
-                android:layout_height="123dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="184dp"
-                android:layout_marginRight="184dp"
-                android:layout_marginBottom="548dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="TextView"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                android:textSize="32dp" />
 
             <TextView
                 android:id="@+id/LatitudeDif"
-                android:layout_width="93dp"
-                android:layout_height="85dp"
-                android:layout_marginStart="201dp"
-                android:layout_marginLeft="201dp"
-                android:layout_marginTop="47dp"
-                android:text="TextView" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="32dp" />
         </TableRow>
 
         <TableRow
@@ -51,22 +48,21 @@
 
             <TextView
                 android:id="@+id/LongitudeDif"
-                android:layout_width="93dp"
-                android:layout_height="85dp"
-                android:layout_marginStart="201dp"
-                android:layout_marginLeft="201dp"
-                android:layout_marginTop="260dp"
-                android:text="TextView" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="32dp" />
 
             <TextView
                 android:id="@+id/LongitudeText"
-                android:layout_width="201dp"
-                android:layout_height="161dp"
-                android:layout_marginTop="213dp"
-                android:layout_marginEnd="184dp"
-                android:layout_marginRight="184dp"
-                android:layout_marginBottom="332dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="TextView"
+                android:textSize="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </TableRow>
