--- a/app/src/main/res/layout/activity_game3.xml
+++ b/app/src/main/res/layout/activity_game3.xml
@@ -15,42 +15,28 @@
         android:text="hint" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <Button
+            android:id="@+id/playbutton"
             android:layout_width="wrap_content"
-            android:layout_height="441dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            android:layout_height="wrap_content"
+            android:text="Button" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
 
-            <Button
-                android:id="@+id/stop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/playbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
-
-            <TextView
-                android:id="@+id/loudandlow"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="TextView" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/loudandlow"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="TextView" />
     </LinearLayout>
 
 </RelativeLayout>
