announcement for pass game dialog - updated game4UI - ver3 game2UI - updated catalog button * 9 - ver3 game ui - ver 1 pass game dialog - set announcement for hint - updated hint button - set activity 6 - ver 2 activity 5 - ver 1 image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_game5.xml
+++ b/app/src/main/res/layout/activity_game5.xml
@@ -15,10 +15,11 @@
         android:text="hint" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/hintButton">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/input"
