announcement for pass game dialog - updated game6UI - ver2 game4UI - ver3 game2UI - updated catalog button * 9 - ver3 game ui - ver 1 pass game dialog - set announcement for hint - updated hint button - set activity 6 - ver 2 activity 5 - ver 1 image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_game6.xml
+++ b/app/src/main/res/layout/activity_game6.xml
@@ -15,16 +15,21 @@
         android:layout_alignParentRight="true"
         android:text="hint" />
 
-    <Button
+    <ImageButton
         android:id="@+id/clickButton"
-        android:layout_width="121dp"
-        android:layout_height="78dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="100dp"
-        android:stateListAnimator="@null"
+        android:background="null"
+        android:scaleType="centerInside"
+        android:src="@drawable/click"
         android:text="click"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/click"
+        tools:srcCompat="@drawable/click" />
 
     <TextView
         android:id="@+id/timer"
