announcement for pass game dialog - updated 			game8 - ver1 			game6UI - ver2 			game4UI - ver3 			game2UI - updated 			catalog button * 9 - ver3 			game ui - ver 1 			pass game dialog - set 			announcement for hint - updated 			hint button - set 			activity 6 - ver 2 			activity 5 - ver 1 			image button * 9 - set 			button listener - set 			GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_game8.xml
+++ b/app/src/main/res/layout/activity_game8.xml
@@ -20,6 +20,13 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="reset"
+            android:layout_gravity="center"/>
+
         <ImageButton
             android:id="@+id/jeff"
             android:layout_width="200dp"
