--- a/app/src/main/res/layout/activity_game8.xml
+++ b/app/src/main/res/layout/activity_game8.xml
@@ -46,6 +46,12 @@
             android:textColor="@color/designBlue"
             android:layout_gravity="center"/>
 
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reset" />
+
     </LinearLayout>
 
 </RelativeLayout>
